workloads/kube-burner/workloads/large-networkpolicy-egress/sample/cidr-master-cards.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-traffic-cidr-anp-open-network-tenant1-p1
spec:
  priority: 1
  subject:
    namespaces:
      matchLabels:
        customer_tenat: tenant1
  ingress:
  - name: "all-ingress-from-same-tenant"  
    action: Allow   # Allows connection 
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            customer_tenat: tenant1    
  egress:
  - name: "pass-egress-to-cluster-network"
    action: "Pass"
    ports:
      - portNumber:
          port: 9093
          protocol: TCP
      - portNumber:
          port: 9094
          protocol: TCP    
    to:
    - networks:
      - 10.128.0.0/14      
  - name: "deny-egress-to-anp-open-network-1"
    action: "Deny"
    ports:
      - portNumber:
          port: 5432
          protocol: TCP
      - portNumber:
          port: 60000
          protocol: TCP
      - portNumber:
          port: 9099
          protocol: TCP
      - portNumber:
          port: 9393
          protocol: TCP
    to:
    - networks:
      - 10.131.4.143/32
      - 10.131.1.176/32
      - 10.131.1.187/32
      - 10.129.3.157/32
      - 10.130.1.173/32
  - name: "allow-egress-to-anp-open-network-1"
    action: "Allow"
    ports:
      - portNumber:
          port: 8080
          protocol: TCP
      - portRange:
          start: 9201
          end: 9205
          protocol: TCP
    to:
    - networks:
      - 10.131.4.141/32
      - 10.131.4.142/32
      - 10.131.4.154/32
      - 10.129.3.156/32
      - 10.131.1.177/32
  - name: "deny-egress-to-anp-open-network-2"
    action: "Deny"
    ports:
      - portNumber:
          port: 5432
          protocol: TCP
      - portNumber:
          port: 60000
          protocol: TCP
      - portNumber:
          port: 9099
          protocol: TCP
      - portNumber:
          port: 9393
          protocol: TCP
    to:
    - networks:
      - 10.130.1.171/32
      - 10.131.1.180/32
      - 10.131.4.146/32
      - 10.129.3.140/32
      - 10.129.3.141/32
  - name: "allow-egress-to-anp-open-network-2"
    action: "Allow"
    ports:
      - portNumber:
          port: 8080
          protocol: TCP
      - portRange:
          start: 9201
          end: 9205
          protocol: TCP
    to:
    - networks:
      - 10.130.5.97/32
      - 10.130.1.172/32
      - 10.130.1.175/32
      - 10.130.5.100/32
      - 10.129.3.139/32
