workloads/kube-burner/workloads/large-networkpolicy-egress/sample/cidr-selector-by-tenant.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-traffic-egress-cidr-anp-open-network-tenant1-p41
spec:
  priority: 41
  subject:
    namespaces:
      matchLabels:
        customer_tenat: tenant1
  egress:
  - name: "pass-egress-to-cluster-network"
    action: "Pass"
    ports:
      - portNumber:
          port: 9093
          protocol: TCP
      - portNumber:
          port: 9094
          protocol: TCP    
    to:
    - networks:
      - 10.128.0.0/14      
  - name: "deny-egress-to-anp-open-network-1"
    action: "Deny"
    ports:
      - portNumber:
          port: 5432
          protocol: TCP
      - portNumber:
          port: 60000
          protocol: TCP
      - portNumber:
          port: 9099
          protocol: TCP
      - portNumber:
          port: 9393
          protocol: TCP
    to:
    - networks:
      - 10.130.18.54/32
      - 10.130.40.60/32
      - 10.128.48.58/32
      - 10.129.36.60/32
      - 10.130.18.56/32
      - 10.128.16.62/32
      - 10.129.18.61/32
      - 10.131.48.60/32
      - 10.131.28.59/32
      - 10.128.8.68/32
      - 10.131.38.60/32
      - 10.130.18.55/32
      - 10.129.44.61/32
      - 10.130.22.63/32
      - 10.131.50.56/32
      - 10.130.34.59/32
      - 10.128.28.48/32
      - 10.129.30.60/32
      - 10.131.6.57/32
      - 10.130.48.63/32
      - 10.130.22.70/32
      - 10.128.28.58/32
      - 10.131.0.78/32
      - 10.128.32.71/32
      - 10.130.20.62/32
  - name: "allow-egress-to-anp-open-network-1"
    action: "Allow"
    ports:
      - portNumber:
          port: 8080
          protocol: TCP
      - portRange:
          start: 9201
          end: 9205
          protocol: TCP
    to:
    - networks:
      - 10.130.48.64/32
      - 10.129.34.60/32
      - 10.128.20.63/32
      - 10.131.12.61/32
      - 10.129.6.54/32
      - 10.130.48.65/32
      - 10.130.12.73/32
      - 10.129.36.62/32
      - 10.129.36.61/32
      - 10.129.8.57/32
      - 10.129.20.58/32
      - 10.128.46.60/32
      - 10.130.26.68/32
      - 10.129.20.57/32
      - 10.129.20.55/32
      - 10.129.52.69/32
      - 10.130.46.60/32
      - 10.130.12.72/32
      - 10.130.46.61/32
      - 10.129.20.56/32
      - 10.129.42.57/32
      - 10.131.28.74/32
      - 10.131.24.65/32
      - 10.128.22.64/32
      - 10.131.6.71/32
  - name: "deny-egress-to-anp-open-network-2"
    action: "Deny"
    ports:
      - portNumber:
          port: 5432
          protocol: TCP
      - portNumber:
          port: 60000
          protocol: TCP
      - portNumber:
          port: 9099
          protocol: TCP
      - portNumber:
          port: 9393
          protocol: TCP
    to:
    - networks:
      - 10.129.34.70/32
      - 10.128.6.69/32
      - 10.131.26.59/32
      - 10.131.20.64/32
      - 10.130.10.62/32
      - 10.131.46.68/32
      - 10.129.26.71/32
      - 10.131.30.69/32
      - 10.128.48.71/32
      - 10.131.26.60/32
      - 10.131.16.71/32
      - 10.130.40.67/32
      - 10.128.6.70/32
      - 10.129.38.68/32
      - 10.130.10.63/32
      - 10.129.10.74/32
      - 10.128.36.71/32
      - 10.130.52.72/32
      - 10.129.50.65/32
      - 10.128.14.69/32
      - 10.130.12.79/32
      - 10.128.40.62/32
      - 10.131.26.65/32
      - 10.130.18.66/32
      - 10.128.36.70/32
  - name: "allow-egress-to-anp-open-network-2"
    action: "Allow"
    ports:
      - portNumber:
          port: 8080
          protocol: TCP
      - portRange:
          start: 9201
          end: 9205
          protocol: TCP
    to:
    - networks:
      - 10.129.34.71/32
      - 10.131.6.72/32
      - 10.129.26.72/32
      - 10.131.26.62/32
      - 10.131.28.73/32
      - 10.128.32.72/32
      - 10.131.28.72/32
      - 10.128.28.57/32
      - 10.131.26.61/32
      - 10.129.46.73/32
      - 10.131.20.65/32
      - 10.131.26.63/32
      - 10.131.6.70/32
      - 10.129.42.58/32
      - 10.128.44.74/32
      - 10.131.48.67/32
      - 10.131.4.70/32
      - 10.131.42.62/32
      - 10.130.24.68/32
      - 10.128.44.75/32
      - 10.131.4.69/32
      - 10.130.22.72/32
      - 10.129.24.66/32
      - 10.128.46.69/32
      - 10.130.22.71/32
  - name: "deny-egress-to-anp-open-network-3"
    action: "Deny"
    ports:
      - portNumber:
          port: 5432
          protocol: TCP
      - portNumber:
          port: 60000
          protocol: TCP
      - portNumber:
          port: 9099
          protocol: TCP
      - portNumber:
          port: 9393
          protocol: TCP
    to:
    - networks:
      - 10.129.50.66/32
      - 10.130.12.78/32
      - 10.131.38.72/32
      - 10.128.42.71/32
      - 10.129.20.67/32
      - 10.128.14.68/32
      - 10.128.16.72/32
      - 10.131.48.66/32
      - 10.128.18.70/32
      - 10.131.38.73/32
      - 10.129.14.62/32
      - 10.131.36.65/32
      - 10.130.28.73/32
      - 10.130.6.70/32
      - 10.129.6.61/32
      - 10.131.0.80/32
      - 10.128.20.72/32
      - 10.128.36.73/32
      - 10.128.36.74/32
      - 10.129.42.60/32
      - 10.129.6.60/32
      - 10.129.14.63/32
      - 10.128.10.71/32
      - 10.128.40.63/32
      - 10.131.44.70/32
  - name: "allow-egress-to-anp-open-network-3"
    action: "Allow"
    ports:
      - portNumber:
          port: 8080
          protocol: TCP
      - portRange:
          start: 9201
          end: 9205
          protocol: TCP
    to:
    - networks:
      - 10.130.4.71/32
      - 10.130.36.71/32
      - 10.130.46.71/32
      - 10.128.36.72/32
      - 10.129.20.68/32
      - 10.131.34.72/32
      - 10.128.20.71/32
      - 10.129.34.72/32
      - 10.129.46.74/32
      - 10.128.10.70/32
      - 10.131.42.63/32
      - 10.130.30.65/32
      - 10.131.38.75/32
      - 10.128.12.65/32
      - 10.131.28.76/32
      - 10.129.14.64/32
      - 10.131.50.62/32
      - 10.128.40.64/32
      - 10.129.6.63/32
      - 10.129.6.62/32
      - 10.128.12.66/32
      - 10.129.10.76/32
      - 10.128.50.68/32
      - 10.129.26.74/32
      - 10.131.36.66/32
  - name: "deny-egress-to-anp-open-network-4"
    action: "Deny"
    ports:
      - portNumber:
          port: 5432
          protocol: TCP
      - portNumber:
          port: 60000
          protocol: TCP
      - portNumber:
          port: 9099
          protocol: TCP
      - portNumber:
          port: 9393
          protocol: TCP
    to:
    - networks:
      - 10.128.28.60/32
      - 10.131.36.64/32
      - 10.131.44.71/32
      - 10.130.22.73/32
      - 10.129.10.75/32
  - name: "allow-egress-to-anp-open-network-4"
    action: "Allow"
    ports:
      - portNumber:
          port: 8080
          protocol: TCP
      - portRange:
          start: 9201
          end: 9205
          protocol: TCP
    to:
    - networks:
      - 10.131.38.74/32
      - 10.129.42.61/32
      - 10.128.20.73/32
      - 10.130.10.65/32
      - 10.128.10.72/32
